--- a/reto1/conf/configPT.json
+++ b/reto1/conf/configPT.json
@@ -12,5 +12,6 @@ const config = {
 	"lenguajes":"Linguagems aprendidas",
 	"email":"Se precisar me contatar pode me escrever em [email]",
 	"buscar": "Procurar",
-	"saludo": "Olá"
+	"saludo": "Olá",
+	"noResultados": "Não há alunos cujo nome contenha"
 }
